// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalWindow PCサイズのスナップショットテスト 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="makeStyles-modal-4"
      style="top: 50%; left: 50%; transform: translate(-50%, -50%);"
      tabindex="-1"
    />
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`ModalWindow スマホサイズのスナップショットテスト 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="makeStyles-modal_responsive-23"
      style="top: 50%; left: 50%; transform: translate(-50%, -50%);"
      tabindex="-1"
    />
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
